# cats-vs-dogs

./: .gitignore  .pre-commit-config.yaml  infer.py  pyproject.toml  train.py
cats_vs_dogs/: runner.py  utils.py
src/: runner.py
