[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Antony Frolov <i.am.antonyfrolov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchvision = "^0.15.1"
torchinfo = "^1.8.0"
tqdm = "^4.66.1"
nvitop = "^1.3.1"
scikit-learn = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
