[tool.poetry]
name = "mlops-project"
version = "0.1.0"
description = ""
authors = ["Antony Frolov <i.am.antonyfrolov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
torchvision = "^0.15.1"
torchinfo = "^1.8.0"
tqdm = "^4.66.1"
nvitop = "^1.3.1"
scikit-learn = "^1.3.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"
pre-commit = "^3.4.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
line_length = 120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
